# solid

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.db  pyproject.toml
.github/: copilot-instructions.md
alembic/: README  env.py
alembic/versions/: 98a3223aef12_add_watering_and_light_rename_created_.py
app/: config.py  db.py  main.py  models.py  observability.py  repositories.py  schemas.py  services.py
app/routers/: health.py  items.py  plants.py  wiki.py
k8s/: alloy-values.yaml  loki-values.yaml  otel-collector-values.yaml
k8s/backend-service/: traefik-values.yaml  values-observability.yaml  values.yaml
k8s/backend-service/templates/: NOTES.txt  backend-deployment.yaml  deployment.yaml  httproute.yaml  ingress.yaml  service.yaml
