[project]
name = "solid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.14.1",
    "curl-cffi>=0.14.0",
    "fastapi>=0.128.0",
    "google-genai>=1.62.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.60b1",
    "opentelemetry-sdk>=1.39.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.10.1",
    "ruff>=0.14.14",
    "sentry-sdk>=2.52.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.36.0",
]
